Fix spacing

--- a/src/about.css
+++ b/src/about.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 1em;
   }
 
   #hobbies {
@@ -117,6 +118,7 @@
   #hobbies-and-music {
     display: flex;
     flex-direction: row;
+    padding-bottom: 3em;
   }
 
   #about-text-header-container {
